@@ -65,6 +65,8 @@
 41. Fix Qt5 segfault on exit, due to static QIcons being destructed.
 42. Work-around Qt5 bug where toolbuttons (usually with menus) stay in the
     mouse-over state.
+43. Add port number to library cache filename, to cater for scenarios where
+    there is more than 1 server on the same host.
 
 1.0.3
 -----
